<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:paddingStart="@dimen/space_xl"
    android:paddingEnd="@dimen/space_xl">

    <ImageView
        android:id="@+id/offlineIcon"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:src="@drawable/ic_offline"
        android:contentDescription="@null"
        android:alpha="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/offlineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xl"
        android:text="@string/error_no_internet"
        android:textSize="@dimen/text_h3"
        android:textStyle="bold"
        android:textColor="#1A1A1A"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/offlineIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/offlineDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/error_no_internet_desc"
        android:textSize="@dimen/text_body"
        android:textColor="#1A1A1A"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        android:lineSpacingMultiplier="1.6"
        app:layout_constraintTop_toBottomOf="@id/offlineTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRetry"
        style="@style/Btn.Primary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_2xl"
        android:paddingStart="@dimen/space_2xl"
        android:paddingEnd="@dimen/space_2xl"
        android:text="@string/error_retry"
        app:layout_constraintTop_toBottomOf="@id/offlineDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/offlineLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/space_2xl"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
