<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:paddingStart="@dimen/space_xl"
    android:paddingEnd="@dimen/space_xl">

    <!-- آیکون خطا -->
    <ImageView
        android:id="@+id/errorIcon"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:src="@drawable/ic_error"
        android:contentDescription="@null"
        android:alpha="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <!-- عنوان -->
    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xl"
        android:text="@string/error_load_failed"
        android:textSize="@dimen/text_h3"
        android:textStyle="bold"
        android:textColor="#1A1A1A"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/errorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- توضیح -->
    <TextView
        android:id="@+id/errorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/error_load_failed_desc"
        android:textSize="@dimen/text_body"
        android:textColor="#2D2D2D"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        android:lineSpacingMultiplier="1.6"
        app:layout_constraintTop_toBottomOf="@id/errorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- دکمه‌ی تلاش مجدد -->
    <Button
        android:id="@+id/btnRetry"
        style="@style/Btn.Primary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_2xl"
        android:paddingStart="@dimen/space_2xl"
        android:paddingEnd="@dimen/space_2xl"
        android:text="@string/error_retry"
        app:layout_constraintTop_toBottomOf="@id/errorDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- لینک تماس با پشتیبانی -->
    <TextView
        android:id="@+id/btnSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:padding="@dimen/space_sm"
        android:text="@string/error_contact_support"
        android:textSize="@dimen/text_small"
        android:textColor="#B76E79"
        android:fontFamily="@font/vazirmatn"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/btnRetry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
