<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:paddingStart="@dimen/space_xl"
    android:paddingEnd="@dimen/space_xl">

    <!-- آیکون سپر -->
    <ImageView
        android:id="@+id/shieldIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_shield"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <!-- تیتر -->
    <TextView
        android:id="@+id/noticeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xl"
        android:text="@string/filter_notice_title"
        android:textSize="@dimen/text_h2"
        android:textStyle="bold"
        android:textColor="#2D1B24"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/shieldIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- توضیح -->
    <TextView
        android:id="@+id/noticeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:text="@string/filter_notice_description"
        android:textSize="@dimen/text_body"
        android:textColor="#4A3540"
        android:fontFamily="@font/vazirmatn"
        android:gravity="center"
        android:lineSpacingMultiplier="1.7"
        app:layout_constraintTop_toBottomOf="@id/noticeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- برند + آیکون اینفو -->
    <LinearLayout
        android:id="@+id/brandRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3xl"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/noticeDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_info_outline"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:text="@string/filter_notice_brand"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_tertiary"
            android:fontFamily="@font/vazirmatn"
            android:gravity="center" />

    </LinearLayout>

    <!-- دکمه شروع -->
    <Button
        android:id="@+id/btnStart"
        style="@style/Btn.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/space_3xl"
        android:text="@string/filter_notice_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
